# rag-time

./: .gitignore  README.md  main.py  pyproject.toml  rag.py
prompts/: default_prompt.txt  tutor_prompt.txt
